<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.amaximan.tesonet.viewModel.MainVM" />

    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/padding_16"
            android:contentDescription="@string/app_name"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/padding_16"
            android:scaleType="fitStart"
            android:src="@mipmap/logo_2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/padding_8"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_logo" />

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server"
                    android:textAllCaps="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toEndOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar" />
    </android.support.constraint.ConstraintLayout>
</layout>