<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="login.presentation.LoginViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        bind:enabled="@{false}"
        bind:refreshing="@{model.refreshing}"
        tools:context="login.ui.LoginActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="@integer/alpha"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:src="@drawable/bg"
                android:visibility="@integer/background_visibility" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
                    android:textColor="@color/logo"
                    android:textSize="56sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/username_layout"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/text_input_box_stroke"
                    app:hintTextColor="@color/input"
                    app:layout_constraintBottom_toTopOf="@id/password_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:text="@={model.username}"
                        android:textCursorDrawable="@drawable/color_cursor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/text_input_box_stroke"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/input"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleEnabled="true"
                    bind:errorText="@{model.error}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={model.password}"
                        android:textCursorDrawable="@drawable/color_cursor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/input"
                    android:onClick="@{model::login}"
                    android:text="@string/log_in"
                    app:layout_constraintTop_toBottomOf="@id/password_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>